--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@ body {
 }
 
 .conteudo-principal {
+    padding: 70px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -58,4 +59,71 @@ body {
     font-weight: 400;
     font-size: 64px;
     color: #FFF2E7;
+}
+
+.conteudo-principal-escrito-sub-titulo {
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #ECD6C4;
+}
+
+.conteudo-principal-button {
+    background-color: #ECD6C4;
+    width: 185px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-family: 'Sarala', sans-serif;
+    color: #2F2325;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.conteudo-principal-button:hover {
+    background-color: rgba(236, 214, 196, 0.53);
+}
+
+.conteudo-principal-img {
+    height: 230px;
+    width: 180px;
+}
+
+.conteudo-secundario {
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-secundario-titulo {
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFF2E7;
+    margin-bottom: 16px;
+}
+
+.conteudo-secundario-paragrafo {
+    font-family: 'Sarala', sans-serif;
+    color: #ECD6C4;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.rodape {
+    padding: 32px;
+    border-top: 0.4px solid #FFF2E7;
+
+}
+
+.rodape-img {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
 }
