--- a/view/index.ejs
+++ b/view/index.ejs
@@ -10,12 +10,12 @@
 
 <body>
     <header class="cabeçalho">
-        <img class="img_cabeçalho" src="" alt="logo">
+        <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo">
         <nav class= "cabeçalho_geral">
             <a class="button_cabeçalho" href="">Comunidade</a>
             <a class="button_cabeçalho" href="">Tutoriais</a>
-            <a class="button_cabeçalho" href="">Open Source</a>
-            <a class="button_cabeçalho" href="">Comandos</a>
+            <a class="button_cabeçalho" href="">Ferramentas</a>
+            <a class="button_cabeçalho" href="">Autores</a>
         </nav>
     </header>
 
@@ -23,25 +23,25 @@
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Educa Tech</h1>
-                <h2 class="conteudo-principal-escrito-sub-titulo">Encontre os melhores caminhos para conectar a tecnologia à educação!!</h2>
+                <h2 class="conteudo-principal-escrito-sub-titulo">Encontre os melhores caminhos para se conectar <br> no universo de tecnologia e educação!!</h2>
                 <button class="conteudo-principal-button">Participe</button>
             </div>
 
-            <img class="conteudo-principal-img" src="" alt="imagem interativa">
+            <img class="conteudo-principal-img" src="/img_corpo.png" alt="imagem interativa">
         </section>
 
         <section class="conteudo-secundario">
 
-            <h3 class="conteudo-secundario-titulo"></h3>
-            <p class="conteudo-secundario-paragrafo"></p>
-            <p class="conteudo-secundario-paragrafo"></p>
-            <p class="conteudo-secundario-paragrafo"></p>
+            <h3 class="conteudo-secundario-titulo">Educação e tecnologia:</h3>
+            <p class="conteudo-secundario-paragrafo">Conheça as ferramentas que potem ajudar no processo de aprendizagem!!</p>
+            <p class="conteudo-secundario-paragrafo">Compreenda as e execute as melhores metodologias educativas interligadas à tecnologia!!</p>
+            <p class="conteudo-secundario-paragrafo">Conheça uma comunidade que pensa em uma educação inovadora!!</p>
 
         </section>
     </main>
 
     <footer class="rodape">
-        <img class="rodape-img" src="" alt="logo">
+        <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
     </footer>
 
 </body>
