--- a/view/index.ejs
+++ b/view/index.ejs
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educ_tech</title>
+    <link rel="stylesheet" type="text/css" href="/style_index.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
     <header class="cabeçalho">
-        <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo">
+        <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
         <nav class= "cabeçalho_geral">
-            <a class="button_cabeçalho" href="">Comunidade</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/comunidade">Comunidade</a>
             <a class="button_cabeçalho" href="">Tutoriais</a>
             <a class="button_cabeçalho" href="">Ferramentas</a>
             <a class="button_cabeçalho" href="">Autores</a>
