--- a/view/ferramentas.ejs
+++ b/view/ferramentas.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educ_tech</title>
-    <link rel="stylesheet" type="text/css" href="/style_comunidade.css">
+    <link rel="stylesheet" type="text/css" href="/style_ferramentas.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -13,30 +13,13 @@
     <header class="cabeçalho">
         <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
         <nav class= "cabeçalho_geral">
-            <a class="button_cabeçalho" href="">Comunidade</a>
-            <a class="button_cabeçalho" href="">Tutoriais</a>
-            <a class="button_cabeçalho" href="">Ferramentas</a>
-            <a class="button_cabeçalho" href="">Autores</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/comunidade">Comunidade</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
     </header>
 
-    <main class="">
-        <section class="">
-            <div class="">
-                <h1 class=""></h1>
-                <h2 class=""></h2>
-                <button class=""></button>
-            </div>
-
-            <img class="">
-        </section>
-
-        <section class="">
-        </section>
-    </main>
-
-    <footer class="">
-    </footer>
 
 </body>
 
