--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -13,30 +13,12 @@
     <header class="cabeçalho">
         <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
         <nav class= "cabeçalho_geral">
-            <a class="button_cabeçalho" href="">Comunidade</a>
-            <a class="button_cabeçalho" href="">Tutoriais</a>
-            <a class="button_cabeçalho" href="">Ferramentas</a>
-            <a class="button_cabeçalho" href="">Autores</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/comunidade">Comunidade</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
     </header>
-
-    <main class="">
-        <section class="">
-            <div class="">
-                <h1 class=""></h1>
-                <h2 class=""></h2>
-                <button class=""></button>
-            </div>
-
-            <img class="">
-        </section>
-
-        <section class="">
-        </section>
-    </main>
-
-    <footer class="">
-    </footer>
 
 </body>
 
