--- a/view/index.ejs
+++ b/view/index.ejs
@@ -14,9 +14,9 @@
         <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
         <nav class= "cabeçalho_geral">
             <a class="button_cabeçalho" href="http://localhost:8000/comunidade">Comunidade</a>
-            <a class="button_cabeçalho" href="">Tutoriais</a>
-            <a class="button_cabeçalho" href="">Ferramentas</a>
-            <a class="button_cabeçalho" href="">Autores</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
     </header>
 
