--- a/view/index.ejs
+++ b/view/index.ejs
@@ -25,7 +25,7 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Educa Tech</h1>
                 <h2 class="conteudo-principal-escrito-sub-titulo">Encontre os melhores caminhos para se conectar <br> no universo de tecnologia e educação!!</h2>
-                <button class="conteudo-principal-button">Participe</button>
+                <a href="http://localhost:8000/participe"><button class="conteudo-principal-button">Participe</button></a>
             </div>
 
             <img class="conteudo-principal-img" src="/img_corpo.png" alt="imagem interativa">
