--- a/view/participe.ejs
+++ b/view/participe.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educ_tech</title>
-    <link rel="stylesheet" type="text/css" href="/style_comunidade.css">
+    <link rel="stylesheet" type="text/css" href="/participe.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -20,7 +20,26 @@
         </nav>
     </header>
 
-    <main class="conteudo"></main>
+    <main class="conteudo"> 
+    </main>
+
+    <section class="area-login">
+        <div class="login">
+            <div>
+                <img src="/img_corpo.png" alt="">
+            </div>
+            <div>
+
+                <form method="post">
+                    <input type="text" name="nome" placeholder="nome de usuario" autofocus>
+                    <input type="password" name="senha" placeholder="sua senha" autofocus>
+                    <input type="submit" value="entrar">
+                </form>
+                <p>Ainda não tem conta? <a href="#"> criar conta</a> </p>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
