--- a/view/autores.ejs
+++ b/view/autores.ejs
@@ -20,7 +20,19 @@
         </nav>
     </header>
 
-    <main class="conteudo"></main>
+    <main class="conteudo">
+        <section class="autores">
+            <div class="autores-caixa">
+                <h1 class="autores-titulo"></h1>
+                <p class="autores-paragrafo"></p>
+                <a class="autores-img" href=""> <img src="" alt=""> </a>
+                <a class="autores-img" href=""> <img src="" alt=""> </a>
+                <a class="autores-img" href=""> <img src="" alt=""> </a>
+                <a class="autores-img" href=""> <img src="" alt=""> </a>
+                <a class="autores-img" href=""> <img src="" alt=""> </a>
+            </div>
+        </section>
+    </main>
 
 </body>
 
