--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -24,7 +24,7 @@
         <section class="lista">
             <h1 class="lista-text">Comunidade:</h1>
             <% for(let i = 0; i < ListaComunidade.length; i++) { %>
-                <a> <%= ListaComunidade[i].nome %></a><br/>
+                <p><%= ListaComunidade[i].nome %></p>
               <% }%>
         </section>
     </main>
