--- a/view/ferramentas.ejs
+++ b/view/ferramentas.ejs
@@ -20,7 +20,19 @@
         </nav>
     </header>
 
-    <main class="conteudo"></main>
+    <main class="conteudo">
+        <section class="ferramenta">
+            <div class="ferramenta-caixa">
+                <h1 class="ferramenta-titulo"></h1>
+                <p class="ferramenta-paragrafo"></p>
+                <a class="ferramenta-img" href=""> <img src="" alt=""> </a>
+                <a class="ferramenta-img" href=""> <img src="" alt=""> </a>
+                <a class="ferramenta-img" href=""> <img src="" alt=""> </a>
+                <a class="ferramenta-img" href=""> <img src="" alt=""> </a>
+                <a class="ferramenta-img" href=""> <img src="" alt=""> </a>
+            </div>
+        </section>
+    </main>
 
 </body>
 
