--- a/view/tutoriais.ejs
+++ b/view/tutoriais.ejs
@@ -20,7 +20,21 @@
         </nav>
     </header>
 
-    <main class="conteudo"></main>
+    <main class="conteudo">
+
+        <section class="conteudo-video">
+            <div class="conteudo-caixa">
+                <h1 class="conteudo-titulo">Aprenda como ampliar o ensino através da tecnologia:</h1>
+                <p class="conteudo-paragrafo">Os melhores artigos e vídeos</p>
+                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
+                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
+                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
+                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
+                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
+
+            </div>
+        </section>
+    </main>
 
 </body>
 
