--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -23,8 +23,8 @@
     <main class="conteudo">
         <section class="lista">
             <h1 class="lista-text">Comunidade:</h1>
-            <% for(let i = 0; i < ListaComunidade.length; i++) { %>
-                <p><%= ListaComunidade[i].nome %></p>
+            <% for(let i = 0; i < lista.length; i++) { %>
+                <p><%= lista[i].nome %></p>
               <% }%>
         </section>
     </main>
