--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -24,7 +24,7 @@
         <section class="lista">
             <h1 class="lista-text">Comunidade:</h1>
             <% for(let i = 0; i < lista.length; i++) { %>
-                <p><%= lista[i].nome %></p>
+                <p class="lista-paragrafo"><%= lista[i].nome %></p>
               <% }%>
         </section>
     </main>
