--- a/view/tutoriais.ejs
+++ b/view/tutoriais.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educ_tech</title>
-    <link rel="stylesheet" type="text/css" href="/style_tutoriais.css">
+    <link rel="stylesheet" type="text/css" href="/tutoriais.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -23,15 +23,20 @@
     <main class="conteudo">
 
         <section class="conteudo-video">
-            <div class="conteudo-caixa">
                 <h1 class="conteudo-titulo">Aprenda como ampliar o ensino através da tecnologia:</h1>
                 <p class="conteudo-paragrafo">Os melhores artigos e vídeos</p>
-                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
-                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
-                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
-                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
-                <a class="conteudo-img" href=""> <img src="" alt=""> </a>
+            <div class="conteudo-caixa">
+                <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
+                <a class="conteudo-img" href="https://www.youtube.com/watch?v=9rfk4q4dMbM&t=91s"> <img src="video.png" alt=""> </a>
+                <a class="conteudo-img" href="https://www.youtube.com/watch?v=nmQ-UCSn_Qw"> <img src="video.png" alt=""> </a>
+                <a class="conteudo-img" href=""> <img src="video.png" alt=""> </a>
 
+           
+                <div class="conteudo-caixa">
+                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=huMe4bLrF4w&t=5s"> <img src="video.png" alt=""> </a>
+                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=cD-y0kVAYXs&t=604s"> <img src="video.png" alt=""> </a>
+                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=3Zw_mm3DwFk&t=1771s"> <img src="video.png" alt=""> </a>
+                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=-j_2oozVP9Y&t=2306s"> <img src="video.png" alt=""> </a>
             </div>
         </section>
     </main>
