--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -22,10 +22,11 @@
 
     <main class="conteudo">
         <section class="lista">
-            <h1 class="lista-text">Comunidade:</h1>
-            <% for(let i = 0; i < lista.length; i++) { %>
-                <p class="lista-paragrafo"><%= lista[i].nome %></p>
-              <% }%>
+            <h1 class="lista-text">Participe das nossas comunidades:</h1>
+            <a class="lista-paragrafo" href="https://discord.com/">Discord</a>
+            <a class="lista-paragrafo" href="https://web.whatsapp.com/">WhatsApp</a>
+            <a class="lista-paragrafo" href="https://web.telegram.org/#/login">Telegram</a>
+        
         </section>
     </main>
 
