--- a/view/participe.ejs
+++ b/view/participe.ejs
@@ -31,9 +31,9 @@
             <div>
 
                 <form method="post">
-                    <input type="text" name="nome" placeholder="nome de usuario" autofocus>
-                    <input type="password" name="senha" placeholder="sua senha" autofocus>
-                    <input type="submit" value="entrar">
+                    <input type="text" name="nome" placeholder="seu nome" autofocus>
+                    <input type="password" name="participacao" placeholder="sua participação" autofocus>
+                    <input onclick="save()" type="submit" value="entrar">
                 </form>
                 <p>Ainda não tem conta? <a href="#"> criar conta</a> </p>
             </div>
@@ -42,5 +42,7 @@
 
 
 </body>
+
+<script src="/script.js"></script>
 
 </html>
