--- a/view/index.ejs
+++ b/view/index.ejs
@@ -13,9 +13,9 @@
     <header class="cabeçalho">
         <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
         <nav class= "cabeçalho_geral">
-            <a class="button_cabeçalho" href="http://localhost:8000/comunidade">Comunidade</a>
             <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
             <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/colaboradores">Colaboradores</a>
             <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
     </header>
@@ -25,7 +25,7 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Educa Tech</h1>
                 <h2 class="conteudo-principal-escrito-sub-titulo">Encontre os melhores caminhos para se conectar <br> no universo de tecnologia e educação!!</h2>
-                <a href="http://localhost:8000/participe"><button class="conteudo-principal-button">Participe</button></a>
+                <a href="http://localhost:8000/comunidade"><button class="conteudo-principal-button">Participe</button></a>
             </div>
 
             <img class="conteudo-principal-img" src="/img_corpo.png" alt="imagem interativa">
