--- a/view/colaboradores.ejs
+++ b/view/colaboradores.ejs
@@ -13,9 +13,9 @@
     <header class="cabeçalho">
         <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
         <nav class= "cabeçalho_geral">
-            <a class="button_cabeçalho" href="http://localhost:8000/comunidade">Comunidade</a>
             <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
             <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/colaboradores">Colaboradores</a>
             <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
     </header>
@@ -24,8 +24,15 @@
         <section class="lista">
             <h1 class="lista-text">Colaboradores do mês:</h1>
             <% for(let i = 0; i < colaboradores.length; i++) { %>
-                <p class="lista-paragrafo"><%= colaboradores[i].nome %></p>
+                <p class="lista-paragrafo"><%= colaboradores[i].nome %> - <%= colaboradores[i].valor %></p>
               <% }%>
+              <p class="lista-agradecimento">Agradecemos a todos pela colaboração, <br>a sua contribuição faz toda diferença!!</p>
+        </section>
+
+        <section class="colaborar">
+            <h1 class="colabore-text">Seja um colaborador também!!</h1>
+            <p class="colabore-paragrafo">Pix: 876543219-2</p>
+            <a href="http://localhost:8000/"><button class="colabore-button">Colabore</button></a>
         </section>
     </main>
 
