--- a/view/tutoriais.ejs
+++ b/view/tutoriais.ejs
@@ -27,17 +27,36 @@
                 <p class="conteudo-paragrafo">Os melhores artigos e vídeos</p>
             <div class="conteudo-caixa">
                 <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
-                <a class="conteudo-img" href="https://www.youtube.com/watch?v=9rfk4q4dMbM&t=91s"> <img src="video.png" alt=""> </a>
-                <a class="conteudo-img" href="https://www.youtube.com/watch?v=nmQ-UCSn_Qw"> <img src="video.png" alt=""> </a>
-                <a class="conteudo-img" href=""> <img src="video.png" alt=""> </a>
-
-           
-                <div class="conteudo-caixa">
-                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=huMe4bLrF4w&t=5s"> <img src="video.png" alt=""> </a>
-                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=cD-y0kVAYXs&t=604s"> <img src="video.png" alt=""> </a>
-                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=3Zw_mm3DwFk&t=1771s"> <img src="video.png" alt=""> </a>
-                    <a class="conteudo-img" href="https://www.youtube.com/watch?v=-j_2oozVP9Y&t=2306s"> <img src="video.png" alt=""> </a>
+                <div class="texto">
+                    <h1 class="conteudo-titulo-text">A sociedade e a educação</h1>
+                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                </div>
             </div>
+
+            <div class="conteudo-caixa">
+                <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
+                <div class="texto">
+                    <h1 class="conteudo-titulo-text">A sociedade e a educação</h1>
+                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                </div>
+            </div>
+
+            <div class="conteudo-caixa">
+                <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
+                <div class="texto">
+                    <h1 class="conteudo-titulo-text"> A sociedade e a educação</h1>
+                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                </div>
+            </div>
+
+            <div class="conteudo-caixa">
+                <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
+                <div class="texto">
+                    <h1 class="conteudo-titulo-text"> A sociedade e a educação</h1>
+                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                </div>
+            </div>
+
         </section>
     </main>
 
