--- a/public/tutoriais.css
+++ b/public/tutoriais.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala&display=swap');
 
+.conteudo-caixa1 {
+    display: flex;
+    flex-direction: row;
+    padding: 15px;
+}
+
+.texto {
+    margin-left: 5px;
+}
+
 .conteudo-video {
     display: flex;
     flex-direction: column;
@@ -11,12 +21,20 @@
     font-family: 'Sarala', sans-serif;
     color: #FFF2E7;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 14px;
     margin-bottom: 20px;
 }
 
 .conteudo-titulo {
     font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 28px;
+    color: #FFF2E7;
+    margin-bottom: 16px;
+}
+
+.conteudo-titulo-text {
+    font-family: 'Sarala', sans-serif;
     font-weight: 400;
     font-size: 28px;
     color: #FFF2E7;
