--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -21,11 +21,12 @@
     </header>
 
     <main class="conteudo">
+
         <section class="lista">
             <h1 class="lista-text">Participe das nossas comunidades:</h1>
-            <a class="lista-paragrafo" href="https://discord.com/">Discord</a>
-            <a class="lista-paragrafo" href="https://web.whatsapp.com/">WhatsApp</a>
-            <a class="lista-paragrafo" href="https://web.telegram.org/#/login">Telegram</a>
+            <a href="https://discord.com/"><button class="conteudo-principal-button">Discord</button></a>
+            <a href="https://web.whatsapp.com/"><button class="conteudo-principal-button">WhatsApp</button></a>
+            <a href="https://web.telegram.org/#/login"><button class="conteudo-principal-button">Telegram</button></a>
         
         </section>
     </main>
