--- a/view/tutoriais.ejs
+++ b/view/tutoriais.ejs
@@ -24,12 +24,12 @@
 
         <section class="conteudo-video">
                 <h1 class="conteudo-titulo">Aprenda como ampliar o ensino através da tecnologia:</h1>
-                <p class="conteudo-paragrafo">Os melhores artigos e vídeos</p>
+                <p class="conteudo-paragrafo">Os melhores artigos e vídeos sobre como a educação e atecnologia se <br> integram na sociedade atual, demandando novas movimentações.</p>
             <div class="conteudo-caixa">
                 <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
                 <div class="texto">
                     <h1 class="conteudo-titulo-text">A sociedade e a educação</h1>
-                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                    <p class="conteudo-paragrafo-text">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
                 </div>
             </div>
 
@@ -37,7 +37,7 @@
                 <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
                 <div class="texto">
                     <h1 class="conteudo-titulo-text">A sociedade e a educação</h1>
-                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                    <p class="conteudo-paragrafo-text">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
                 </div>
             </div>
 
@@ -45,7 +45,7 @@
                 <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
                 <div class="texto">
                     <h1 class="conteudo-titulo-text"> A sociedade e a educação</h1>
-                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                    <p class="conteudo-paragrafo-text">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                 <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
                 <div class="texto">
                     <h1 class="conteudo-titulo-text"> A sociedade e a educação</h1>
-                    <p class="conteudo-paragrafo">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
+                    <p class="conteudo-paragrafo-text">Aprenda como ampliar o ensino através da tecnologia, Aprenda como ampliar o ensino através da tecnologia, <br> Aprenda como ampliar o ensino através da tecnologia,Aprenda como ampliar o ensino através da tecnologia.</p>
                 </div>
             </div>
 
