--- a/public/style_comunidade.css
+++ b/public/style_comunidade.css
@@ -34,3 +34,19 @@
 .lista-paragrafo:hover {
     transform: scale(1.1);
 }
+
+.conteudo-principal-button {
+    background-color: #ECD6C4;
+    width: 185px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Sarala', sans-serif;
+    color: #2F2325;
+    font-weight: 400;
+    font-size: 24px;
+    cursor: pointer;
+}
