--- a/view/autores.ejs
+++ b/view/autores.ejs
@@ -29,6 +29,10 @@
         </section>
     </main>
 
+    <footer class="rodape">
+        <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
+    </footer>
+
 </body>
 
 </html>
