--- a/view/tutoriais.ejs
+++ b/view/tutoriais.ejs
@@ -24,7 +24,7 @@
 
         <section class="conteudo-video">
                 <h1 class="conteudo-titulo">Aprenda como ampliar o ensino através da tecnologia:</h1>
-                <p class="conteudo-paragrafo">Os melhores artigos e vídeos sobre como a educação e atecnologia se <br> integram na sociedade atual, demandando novas movimentações.</p>
+                <p class="conteudo-paragrafo"></p>
             <div class="conteudo-caixa">
                 <a class="conteudo-img" href="https://www.youtube.com/watch?v=K3tdHpey0Vk"> <img src="video.png" alt=""> </a>
                 <div class="texto">
@@ -59,6 +59,10 @@
 
         </section>
     </main>
+
+    <footer class="rodape">
+        <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
+    </footer>
 
 </body>
 
