--- a/public/autores.css
+++ b/public/autores.css
@@ -28,3 +28,15 @@
     font-weight: 400;
     font-size: 18px;
 }
+
+.rodape {
+    padding: 32px;
+    border-top: 0.4px solid #FFF2E7;
+
+}
+
+.rodape-img {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
+}
