--- a/public/colaboradores.css
+++ b/public/colaboradores.css
@@ -78,3 +78,15 @@
     font-size: 24px;
     cursor: pointer;
 }
+
+.rodape {
+    padding: 32px;
+    border-top: 0.4px solid #FFF2E7;
+
+}
+
+.rodape-img {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
+}
