--- a/view/colaboradores.ejs
+++ b/view/colaboradores.ejs
@@ -36,6 +36,10 @@
         </section>
     </main>
 
+    <footer class="rodape">
+        <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
+    </footer>
+    
 </body>
 
 </html>
