--- a/view/comunidade.ejs
+++ b/view/comunidade.ejs
@@ -31,6 +31,10 @@
         </section>
     </main>
 
+    <footer class="rodape">
+        <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
+    </footer>
+
 </body>
 
 </html>
