--- a/view/ferramentas.ejs
+++ b/view/ferramentas.ejs
@@ -32,6 +32,10 @@
         </section>
     </main>
 
+    <footer class="rodape">
+        <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
+    </footer>
+
 </body>
 
 </html>
