Artigo - lê artigos de ferramentas

--- a/view/artigo.ejs
+++ b/view/artigo.ejs
@@ -20,11 +20,8 @@
 
     <main class="conteudo">
         <section class="artigo">
-            <h1 class="artigo-text">Artigos:</h1>
-            <% for(let i = 0; i < artigos.length; i++) { %>
-                <p class="artigo-titulo"><%= artigos[i].titulo %></p>
-                <p><%= artigos[i].texto %></p>
-              <% }%>
+            <h1 class="artigo-text"><%= ferramentas.titulo %></h1>
+            <p><%= ferramentas.artigo %></p>
         </section>
     </main>
 
