--- a/view/artigo.ejs
+++ b/view/artigo.ejs
@@ -13,6 +13,7 @@
         <nav class= "cabeçalho_geral">
             <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
             <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/artigos">Artigos</a>
             <a class="button_cabeçalho" href="http://localhost:8000/colaboradores">Colaboradores</a>
             <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
@@ -20,8 +21,8 @@
 
     <main class="conteudo">
         <section class="artigo">
-            <h1 class="artigo-text"><%= ferramentas.titulo %></h1>
-            <p><%= ferramentas.artigo %></p>
+            <h1 class="artigo-text"><%= artigos.titulo %></h1>
+            <p><%= artigos.artigo %></p>
         </section>
     </main>
 
