--- a/view/colaboradores.ejs
+++ b/view/colaboradores.ejs
@@ -15,6 +15,7 @@
         <nav class= "cabeçalho_geral">
             <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
             <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/artigos">Artigos</a>
             <a class="button_cabeçalho" href="http://localhost:8000/colaboradores">Colaboradores</a>
             <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
