--- a/view/ferramentas.ejs
+++ b/view/ferramentas.ejs
@@ -15,6 +15,7 @@
         <nav class= "cabeçalho_geral">
             <a class="button_cabeçalho" href="http://localhost:8000/Tutoriais">Tutoriais</a>
             <a class="button_cabeçalho" href="http://localhost:8000/ferramentas">Ferramentas</a>
+            <a class="button_cabeçalho" href="http://localhost:8000/artigos">Artigos</a>
             <a class="button_cabeçalho" href="http://localhost:8000/colaboradores">Colaboradores</a>
             <a class="button_cabeçalho" href="http://localhost:8000/autores">Autores</a>
         </nav>
@@ -26,7 +27,7 @@
                 <h1 class="ferramenta-titulo"> Adicione as melhores tecnologias ao processo de aprendizagem: </h1>
                 <p class="ferramenta-paragrafo">Encontre os melhores sites e melhores tecnologias que facilitam e auxiliam o ensino.</p>
                 <% for(let i = 0; i < ferramentas.length; i++) { %>
-                <a class="ferramenta-lista" href="/artigo/<%= ferramentas[i].titulo %>"> <%= ferramentas[i].titulo %> </a> <br>
+                <a class="ferramenta-lista" href="/ferramenta/<%= ferramentas[i].titulo %>"> <%= ferramentas[i].titulo %> </a> <br>
                 <% }%>
             </div>
         </section>
