--- a/view/ferramenta.ejs
+++ b/view/ferramenta.ejs
@@ -2,13 +2,11 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Educ_tech</title>
-    <link rel="stylesheet" type="text/css" href="/autores.css">
+    <title>Artigo</title>
+    <link rel="stylesheet" type="text/css" href="/artigo.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
-
 <body>
     <header class="cabeçalho">
         <a href="http://localhost:8000/"> <img class="img_cabeçalho" src="/img_cabeçalho.png" alt="logo"> </a>
@@ -22,18 +20,14 @@
     </header>
 
     <main class="conteudo">
-        <section class="lista">
-            <h1 class="lista-text">Autores e produtores:</h1>
-            <% for(let i = 0; i < lista.length; i++) { %>
-                <p class="lista-paragrafo"><%= lista[i].nome %></p>
-              <% }%>
+        <section class="artigo">
+            <h1 class="artigo-text"><%= ferramentas.titulo %></h1>
+            <p><%= ferramentas.artigo %></p>
         </section>
     </main>
 
     <footer class="rodape">
         <img class="rodape-img" src="/img_cabeçalho.png" alt="logo">
     </footer>
-
 </body>
-
 </html>
