mudança no texto de artigo e ferramenta

--- a/view/artigos.ejs
+++ b/view/artigos.ejs
@@ -24,8 +24,8 @@
     <main class="conteudo">
         <section class="ferramenta">
             <div class="ferramenta-caixa">
-                <h1 class="ferramenta-titulo"> Adicione as melhores tecnologias ao processo de aprendizagem: </h1>
-                <p class="ferramenta-paragrafo">Encontre os melhores sites e melhores tecnologias que facilitam e auxiliam o ensino.</p>
+                <h1 class="ferramenta-titulo"> Esteja por dentro das principais discussão sobre educação: </h1>
+                <p class="ferramenta-paragrafo">A sua prática deve ser problematizada, pensada e aprimorada, pensando em você e em seus alunos.</p>
                 <% for(let i = 0; i < artigos.length; i++) { %>
                 <a class="ferramenta-lista" href="/artigo/<%= artigos[i].titulo %>"> <%= artigos[i].titulo %> </a> <br>
                 <% }%>
