--- a/view/ferramentas.ejs
+++ b/view/ferramentas.ejs
@@ -25,7 +25,7 @@
         <section class="ferramenta">
             <div class="ferramenta-caixa">
                 <h1 class="ferramenta-titulo"> Adicione as melhores tecnologias ao processo de aprendizagem: </h1>
-                <p class="ferramenta-paragrafo">Encontre os melhores sites e melhores tecnologias que facilitam e auxiliam o ensino.</p>
+                <p class="ferramenta-paragrafo">Encontre os melhores sites e melhores tecnologias que facilitam, auxiliam e melhoram o ensino no Brasil.</p>
                 <% for(let i = 0; i < ferramentas.length; i++) { %>
                 <a class="ferramenta-lista" href="/ferramenta/<%= ferramentas[i].titulo %>"> <%= ferramentas[i].titulo %> </a> <br>
                 <% }%>
